CREATE TABLE IF NOT EXISTS Comic
(
    id          INTEGER PRIMARY KEY AUTOINCREMENT,
    url         TEXT
);
