CREATE TABLE IF NOT EXISTS Keyword
(
    id   INTEGER PRIMARY KEY AUTOINCREMENT,
    word TEXT UNIQUE
);
